bk_ida/gccida/g3/build_qualified_type
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/build_qualified_type/src/tree.c:3517:12: error: expected expression
*( _OWORD *)&result->block.fragment_chain = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/build_qualified_type/src/tree.c:3517:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->block.fragment_chain = 0LL; 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/build_qualified_type/src/obj/tree.o] Error 1
